load("@dagger//:workspace_defs.bzl", "dagger_rules")
load("@grab_bazel_common//toolchains:toolchains.bzl", "configure_common_toolchains")
load("@grab_bazel_common//tools/parcelize:parcelize.bzl", "parcelize_rules")
load("@io_bazel_rules_kotlin//kotlin:core.bzl", "define_kt_toolchain", "kt_javac_options", "kt_kotlinc_options", "kt_ksp_plugin")

kt_kotlinc_options(
    name = "kt_kotlinc_options",
)

kt_javac_options(
    name = "kt_javac_options",
)

define_kt_toolchain(
    name = "kotlin_toolchain",
    api_version = "1.7",
    experimental_multiplex_workers = True,
    experimental_report_unused_deps = "off",
    experimental_strict_kotlin_deps = "off",
    experimental_use_abi_jars = True,
    javac_options = "//:kt_javac_options",
    jvm_target = "17",
    kotlinc_options = "//:kt_kotlinc_options",
    language_version = "1.7",
)

dagger_rules()

parcelize_rules()

kt_ksp_plugin(
    name = "moshi-kotlin-codegen-ksp",
    generates_java = False,
    processor_class = "com.squareup.moshi.kotlin.codegen.ksp.JsonClassSymbolProcessorProvider",
    target_embedded_compiler = False,
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@ksp_maven//:com_squareup_moshi_moshi_kotlin_codegen",
    ],
)

configure_common_toolchains()

exports_files(["lint.xml"])
