load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android-library-flavor1-free-app-debug-build-config",
    package_name = "com.grab.grazel.android.sample.lib",
)

load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android-library-flavor1-free-app-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-library-flavor1-free-app-debug-build-config",
        "//:parcelize",
    ],
)

load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android-library-flavor1-paid-app-debug-build-config",
    package_name = "com.grab.grazel.android.sample.lib",
)

load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android-library-flavor1-paid-app-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-library-flavor1-paid-app-debug-build-config",
        "//:parcelize",
    ],
)

load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android-library-flavor2-free-app-debug-build-config",
    package_name = "com.grab.grazel.android.sample.lib",
)

load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android-library-flavor2-free-app-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-library-flavor2-free-app-debug-build-config",
        "//:parcelize",
    ],
)

load("@grab_bazel_common//tools/build_config:build_config.bzl", "build_config")

build_config(
    name = "sample-android-library-flavor2-paid-app-debug-build-config",
    package_name = "com.grab.grazel.android.sample.lib",
)

load("@grab_bazel_common//tools/kotlin:android.bzl", "kt_android_library")

kt_android_library(
    name = "sample-android-library-flavor2-paid-app-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    manifest = "src/main/AndroidManifest.xml",
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":sample-android-library-flavor2-paid-app-debug-build-config",
        "//:parcelize",
    ],
)

load("@grab_bazel_common//tools/test:test.bzl", "grab_android_local_test")

grab_android_local_test(
    name = "sample-android-library-flavor1-free-app-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-flavor1-free-app-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-flavor1-free-app-debug",
        "@maven//:junit_junit",
    ],
)

load("@grab_bazel_common//tools/test:test.bzl", "grab_android_local_test")

grab_android_local_test(
    name = "sample-android-library-flavor1-paid-app-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-flavor1-paid-app-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-flavor1-paid-app-debug",
        "@maven//:junit_junit",
    ],
)

load("@grab_bazel_common//tools/test:test.bzl", "grab_android_local_test")

grab_android_local_test(
    name = "sample-android-library-flavor2-free-app-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-flavor2-free-app-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-flavor2-free-app-debug",
        "@maven//:junit_junit",
    ],
)

load("@grab_bazel_common//tools/test:test.bzl", "grab_android_local_test")

grab_android_local_test(
    name = "sample-android-library-flavor2-paid-app-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-flavor2-paid-app-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-flavor2-paid-app-debug",
        "@maven//:junit_junit",
    ],
)
