load("@grab_bazel_common//rules:defs.bzl", "android_library", "android_unit_test")

android_library(
    name = "sample-android-library-demo-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
        "src/debug/kotlin/Empty.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/debug/AndroidManifest.xml",
    resource_sets = {
        "debug": {
            "manifest": "src/debug/AndroidManifest.xml",
        },
        "main": {
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
    ],
)

android_library(
    name = "sample-android-library-demo-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
        "src/debug/kotlin/Empty.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/debug/AndroidManifest.xml",
    resource_sets = {
        "debug": {
            "manifest": "src/debug/AndroidManifest.xml",
        },
        "main": {
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
    ],
)

android_library(
    name = "sample-android-library-full-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
        "src/debug/kotlin/Empty.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/debug/AndroidManifest.xml",
    resource_sets = {
        "debug": {
            "manifest": "src/debug/AndroidManifest.xml",
        },
        "main": {
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
    ],
)

android_library(
    name = "sample-android-library-full-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/SampleViewModel.kt",
        "src/debug/kotlin/Empty.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.lib",
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/debug/AndroidManifest.xml",
    resource_sets = {
        "debug": {
            "manifest": "src/debug/AndroidManifest.xml",
        },
        "main": {
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
    ],
)

android_unit_test(
    name = "sample-android-library-demo-free-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-demo-free-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-demo-free-debug",
        "@test_maven//:junit_junit",
    ],
)

android_unit_test(
    name = "sample-android-library-demo-paid-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-demo-paid-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-demo-paid-debug",
        "@test_maven//:junit_junit",
    ],
)

android_unit_test(
    name = "sample-android-library-full-free-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-full-free-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-full-free-debug",
        "@test_maven//:junit_junit",
    ],
)

android_unit_test(
    name = "sample-android-library-full-paid-debug-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/android/sample/SampleViewModelTest.kt",
    ]),
    associates = [
        "//sample-android-library:sample-android-library-full-paid-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample.lib",
    resources = glob([
        "src/test/resources/**",
    ]),
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//sample-android-library:sample-android-library-full-paid-debug",
        "@test_maven//:junit_junit",
    ],
)
