load("@grab_bazel_common//rules:defs.bzl", "android_instrumentation_binary")

android_instrumentation_binary(
    name = "sample-android-tests-demo-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/tests/**/*.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.tests",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    instruments = "//sample-android:sample-android-demo-free-debug",
    manifest_values = {
        "applicationId": "com.grab.grazel.android.sample.tests",
        "minSdkVersion": "21",
        "orientation": "portrait",
        "targetSdkVersion": "34",
    },
    min_sdk_version = 0,
    resource_files = glob([
        "src/main/res/values/**",
    ]),
    target_package = "com.grab.grazel.android.sample.free",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//sample-android:lib_sample-android-demo-free-debug",
        "@maven//:androidx_compose_ui_ui_test_junit4",
        "@maven//:androidx_compose_ui_ui_test_manifest",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:androidx_test_rules",
        "@maven//:androidx_test_runner",
        "@maven//:com_google_guava_guava",
        "@maven//:junit_junit",
    ],
)

android_instrumentation_binary(
    name = "sample-android-tests-demo-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/tests/**/*.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.tests",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    instruments = "//sample-android:sample-android-demo-paid-debug",
    manifest_values = {
        "applicationId": "com.grab.grazel.android.sample.tests",
        "minSdkVersion": "21",
        "orientation": "portrait",
        "targetSdkVersion": "34",
    },
    min_sdk_version = 0,
    resource_files = glob([
        "src/main/res/values/**",
    ]),
    target_package = "com.grab.grazel.android.sample.paid",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//sample-android:lib_sample-android-demo-paid-debug",
        "@maven//:androidx_compose_ui_ui_test_junit4",
        "@maven//:androidx_compose_ui_ui_test_manifest",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:androidx_test_rules",
        "@maven//:androidx_test_runner",
        "@maven//:com_google_guava_guava",
        "@maven//:junit_junit",
    ],
)

android_instrumentation_binary(
    name = "sample-android-tests-full-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/tests/**/*.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.tests",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    instruments = "//sample-android:sample-android-full-free-debug",
    manifest_values = {
        "applicationId": "com.grab.grazel.android.sample.tests",
        "minSdkVersion": "21",
        "orientation": "portrait",
        "targetSdkVersion": "34",
    },
    min_sdk_version = 0,
    resource_files = glob([
        "src/main/res/values/**",
    ]),
    target_package = "com.grab.grazel.android.sample.free",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//sample-android:lib_sample-android-full-free-debug",
        "@maven//:androidx_compose_ui_ui_test_junit4",
        "@maven//:androidx_compose_ui_ui_test_manifest",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:androidx_test_rules",
        "@maven//:androidx_test_runner",
        "@maven//:com_google_guava_guava",
        "@maven//:junit_junit",
    ],
)

android_instrumentation_binary(
    name = "sample-android-tests-full-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/tests/**/*.kt",
    ]),
    custom_package = "com.grab.grazel.android.sample.tests",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    instruments = "//sample-android:sample-android-full-paid-debug",
    manifest_values = {
        "applicationId": "com.grab.grazel.android.sample.tests",
        "minSdkVersion": "21",
        "orientation": "portrait",
        "targetSdkVersion": "34",
    },
    min_sdk_version = 0,
    resource_files = glob([
        "src/main/res/values/**",
    ]),
    target_package = "com.grab.grazel.android.sample.paid",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//sample-android:lib_sample-android-full-paid-debug",
        "@maven//:androidx_compose_ui_ui_test_junit4",
        "@maven//:androidx_compose_ui_ui_test_manifest",
        "@maven//:androidx_test_espresso_espresso_core",
        "@maven//:androidx_test_ext_junit",
        "@maven//:androidx_test_rules",
        "@maven//:androidx_test_runner",
        "@maven//:com_google_guava_guava",
        "@maven//:junit_junit",
    ],
)
